--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   r2dbc:
-    url: r2dbc:h2:mem:///scheduledb?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+    url: r2dbc:postgresql://localhost:5432/nexosalud
+    username: postgres
+    password: postgres
   application:
     name: schedule-service
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:schema.sql
 logging:
   level:
     org.springframework.data.r2dbc: Debug
